--- a/Pet_Event_Backend/package.json
+++ b/Pet_Event_Backend/package.json
@@ -14,14 +14,25 @@
     "@aws-cdk/assert": "1.95.1",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.95.1",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.95.1",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-appsync": "^1.95.1",
+    "@aws-cdk/aws-dynamodb": "^1.95.1",
+    "@aws-cdk/aws-events": "^1.95.1",
+    "@aws-cdk/aws-events-targets": "^1.95.1",
+    "@aws-cdk/aws-iam": "^1.95.1",
+    "@aws-cdk/aws-sns-subscriptions": "^1.95.1",
+    "@aws-cdk/aws-stepfunctions": "^1.95.1",
+    "@aws-cdk/aws-stepfunctions-tasks": "^1.95.1",
     "@aws-cdk/core": "1.95.1",
+    "@types/aws-lambda": "^8.10.73",
+    "aws-lambda": "^1.0.6",
+    "aws-sdk": "^2.874.0",
     "source-map-support": "^0.5.16"
   }
 }
